@@ -20,7 +20,6 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::File::FromCode" => 0,
     "Dist::Zilla::Role::FileGatherer" => 0,
     "Dist::Zilla::Role::PPI" => 0,
-    "Dist::Zilla::Util::ConfigDumper" => 0,
     "Encode" => 0,
     "List::Util" => 0,
     "Moose" => 0,
@@ -54,7 +53,6 @@ my %FallbackPrereqs = (
   "Dist::Zilla::File::FromCode" => 0,
   "Dist::Zilla::Role::FileGatherer" => 0,
   "Dist::Zilla::Role::PPI" => 0,
-  "Dist::Zilla::Util::ConfigDumper" => 0,
   "Dist::Zilla::Util::Test::KENTNL" => "1.004",
   "Encode" => 0,
   "ExtUtils::MakeMaker" => 0,
