@@ -5,6 +5,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::App::Command::bakeini 0.002005 → 0.002006
  - Dist::Zilla::PluginBundle::Author::KENTNL 2.025020 → 2.025021
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
 0.003001 2017-03-02T00:03:42Z
  [Added / develop requires]
  - Test::MinimumVersion
