@@ -1,9 +1,12 @@
 Release history for Dist-Zilla-Plugin-Readme-Brief
 
 {{$NEXT}}
+ - Stop using ConfigDumper
+
  [Dependencies::Stats]
  - Dependencies changed since 0.003001, see misc/*.deps* for details
  - develop: (suggests: ↑2)
+ - runtime: -1
 
 0.003001 2017-03-02T00:03:42Z 5be0432
  [Bugfix]
